--- a/.github/workflows/jd_pigPet.yml
+++ b/.github/workflows/jd_pigPet.yml
@@ -37,7 +37,7 @@ jobs:
           npm install
       - name: '运行 【京东金融养猪猪】'
         run: |
-          node jd_bean_sign.js
+          node jd_pigPet.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
