--- a/.github/workflows/jd_live_redrain.yml
+++ b/.github/workflows/jd_live_redrain.yml
@@ -6,7 +6,7 @@ name: jd_live_redrain
 on:
   workflow_dispatch:
   schedule:
-    - cron: '59 0,2,4,6,8,10,11,12,14,15 * * *' 
+    - cron: '59 8,10,12,14,16,18,19,20,22,23 * * *' 
   watch:
     types: started
     
@@ -35,6 +35,8 @@ jobs:
         run: |
           npm install
       - name: '运行 【直播红包雨】'
+        env:
+          TZ: Asia/Shanghai 
         run: |
           node jd_live_redrain.js
         env:
