--- a/.github/workflows/jd_watch.yml
+++ b/.github/workflows/jd_watch.yml
@@ -6,7 +6,7 @@ name: jd_watch
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 17 * * *' 
+    - cron: '20 12 * * *' 
   watch:
     types: started
   repository_dispatch:
@@ -39,6 +39,7 @@ jobs:
         run: |
           node jd_watch.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
