--- a/.github/workflows/jd_nian.yml
+++ b/.github/workflows/jd_nian.yml
@@ -9,8 +9,7 @@ on:
     - cron: '10 21 * * *' 
   watch:
     types: started
-  repository_dispatch:
-    types: pantBean
+
 jobs:
   build:
 
@@ -40,6 +39,7 @@ jobs:
           node jd_nian.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
