--- a/.github/workflows/jd_jdfactory.yml
+++ b/.github/workflows/jd_jdfactory.yml
@@ -9,8 +9,7 @@ on:
     - cron: '0 */5 * * *' 
   watch:
     types: started
-  repository_dispatch:
-    types: pantBean
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_jdfactory.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
