--- a/.github/workflows/jd_joy_feedPets.yml
+++ b/.github/workflows/jd_joy_feedPets.yml
@@ -6,11 +6,10 @@ name: jd_joy_feedPets
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 */1 * * *'
+    - cron: '*/20 * * * *'
   watch:
-    types: [started]
-  repository_dispatch:
-    types: joy_feedPets
+    types: started
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_joy_feedPets.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           JOY_FEED_COUNT: ${{ secrets.JOY_FEED_COUNT }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
