--- a/.github/workflows/jd_bookshop.yml
+++ b/.github/workflows/jd_bookshop.yml
@@ -6,7 +6,7 @@ name: jd_bookshop
 on:
   workflow_dispatch:
   schedule:
-    - cron: '1 0,4,10 * * *' 
+    - cron: '1 8,12,18 * * *' 
   watch:
     types: started
 
@@ -38,7 +38,9 @@ jobs:
         run: |
           node jd_bookshop.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
