--- a/.github/workflows/jd_car.yml
+++ b/.github/workflows/jd_car.yml
@@ -6,7 +6,7 @@ name: jd_car
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 18 * * *' 
+    - cron: '0 0 * * *' 
   watch:
     types: started
     
@@ -38,7 +38,9 @@ jobs:
         run: |
           node jd_car.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
