--- a/.github/workflows/jd_joy.yml
+++ b/.github/workflows/jd_joy.yml
@@ -9,8 +9,7 @@ on:
     - cron: '0 0,1,4,10,15,16 * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: joy
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_joy.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           JOY_FEED_COUNT: ${{ secrets.JOY_FEED_COUNT }}
           JOY_RUN_FLAG: ${{ secrets.JOY_RUN_FLAG }}
