--- a/.github/workflows/jd_kd.yml
+++ b/.github/workflows/jd_kd.yml
@@ -6,11 +6,10 @@ name: jd_kd
 on:
   workflow_dispatch:
   schedule:
-    - cron: '01 18 * * *' 
+    - cron: '0 2 * * *' 
   watch:
     types: started
-  repository_dispatch:
-    types: pantBean
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_kd.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
