--- a/.github/workflows/jd_nian.yml
+++ b/.github/workflows/jd_nian.yml
@@ -6,7 +6,7 @@ name: jd_nian
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 21 * * *' 
+    - cron: '10 5 * * *' 
   watch:
     types: started
 
@@ -38,6 +38,7 @@ jobs:
         run: |
           node jd_nian.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
