--- a/.github/workflows/jd_nianCollect.yml
+++ b/.github/workflows/jd_nianCollect.yml
@@ -38,7 +38,9 @@ jobs:
         run: |
           node jd_nianCollect.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
