--- a/.github/workflows/jd_pet.yml
+++ b/.github/workflows/jd_pet.yml
@@ -6,11 +6,10 @@ name: jd_pet
 on:
   workflow_dispatch:
   schedule:
-    - cron: '35 23,4,10 * * *'
+    - cron: '35 7,12,18 * * *'
   watch:
-    types: [started]
-  repository_dispatch:
-    types: pet
+    types: started
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_pet.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
