--- a/.github/workflows/jd_plantBean.yml
+++ b/.github/workflows/jd_plantBean.yml
@@ -6,11 +6,10 @@ name: jd_plantBean
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 23,0-14/1 * * *' #此处为UTC-0时间
+    - cron: '0 8-22 * * *' #此处为UTC-0时间
   watch:
     types: started
-  repository_dispatch:
-    types: pantBean
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_plantBean.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
