--- a/.github/workflows/jd_rankingList.yml
+++ b/.github/workflows/jd_rankingList.yml
@@ -6,11 +6,10 @@ name: jd_rankingList
 on:
   workflow_dispatch:
   schedule:
-    - cron: '11 18 * * *'
+    - cron: '11 2 * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: jd_rankingList
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_rankingList.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
