--- a/.github/workflows/jd_small_home.yml
+++ b/.github/workflows/jd_small_home.yml
@@ -6,11 +6,10 @@ name: jd_small_home
 on:
   workflow_dispatch:
   schedule:
-    - cron: '16 0 * * * ' 
+    - cron: '0 8 * * * ' 
   watch:
     types: started
-  repository_dispatch:
-    types: pantBean
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_small_home.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
