--- a/.github/workflows/jd_unbind.yml
+++ b/.github/workflows/jd_unbind.yml
@@ -7,8 +7,7 @@ on:
   workflow_dispatch:
   watch:
         types: started
-  repository_dispatch:
-    types: unsubscribe
+
 jobs:
   build:
 
@@ -37,7 +36,9 @@ jobs:
         run: |
           node jd_unbind.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           UN_SUBSCRIBES: ${{ secrets.UN_SUBSCRIBES }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
