--- a/.github/workflows/jd_unsubscribe.yml
+++ b/.github/workflows/jd_unsubscribe.yml
@@ -6,11 +6,10 @@ name: jd_unsubscribe
 on:
   workflow_dispatch:
   schedule:
-    - cron: '45 15 * * *'
+    - cron: '15 23 * * *'
   watch:
         types: started
-  repository_dispatch:
-    types: unsubscribe
+
 jobs:
   build:
 
@@ -39,7 +38,9 @@ jobs:
         run: |
           node jd_unsubscribe.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           UN_SUBSCRIBES: ${{ secrets.UN_SUBSCRIBES }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
