--- a/.github/workflows/jx_sign.yml
+++ b/.github/workflows/jx_sign.yml
@@ -6,7 +6,7 @@ name: jx_sign
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 16 * * *' 
+    - cron: '10 0 * * *' 
   watch:
     types: started
 
@@ -38,7 +38,9 @@ jobs:
         run: |
           node jx_sign.js
         env:
+          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
