--- a/.github/workflows/jd_joy_feedPets.yml
+++ b/.github/workflows/jd_joy_feedPets.yml
@@ -6,7 +6,7 @@ name: jd_joy_feedPets
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: '*/20 */1 * * *'
   watch:
     types: started
 
@@ -38,7 +38,6 @@ jobs:
         run: |
           node jd_joy_feedPets.js
         env:
-          TZ: Asia/Shanghai
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
